# fairreckitlib

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg
.github/workflows/: alt_publish_test.yml  doc-gen.yml  partial-lint.yml  pydocstyle.yml  pylint.yml  pypi-publish.yml  pypi_publish.yml  pytest-coverage.yml  python-publish.yml
config_files/: all_predictors.yml  all_recommenders.yml  dev.yml  dev_layout.yml  metrics_all_no_filters.yml  ml_100k_all_models.yml  predictors_all.yml  predictors_lenskit.yml  predictors_surprise.yml  recommenders_all.yml  recommenders_elliot.yml  recommenders_implicit.yml  recommenders_lenskit.yml  recommenders_surprise.yml
dataloaders/: __init__.py  config.ini  dataloader_lfm_360k.py  dataloader_ml_100k.py  dataloaders.py  utility.py
docs/: index.html  search.js
docs/src/: fairreckitlib.html
fair-rec-kit-lib/: recommender_system.py
fair-rec-kit-lib/algorithms/: algorithm.py  common.py  factory.py  params.py  predictor.py  recommender.py
fair-rec-kit-lib/dataloaders/: config.ini  dataloaders.py  (+1 more)
fair_rec_kit_lib/: recommender_system.py
fairreckitlib/: recommender_system.py  roderick_eval.py  run_dev_helper.py
mock/: mock.py
src/: __init__.py  roderick.py  roderickl.py
test/: test_mock.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_config_params.py  test_converting.py  test_core_config_factories.py  test_core_config_params.py  test_core_config_yml_obj.py  test_core_events.py  test_core_io.py  test_core_parsing.py  test_core_parsing_assert.py  test_core_parsing_obj_params.py  test_core_pipeline.py  test_core_threading.py  test_data_config.py  test_data_converting.py  test_data_converting_config.py  test_data_factory.py  test_data_filter_basic.py  test_data_filter_samples.py  test_data_pipeline.py  test_data_registry.py  test_data_splitting.py  test_data_splitting_config.py  test_data_subset_config.py  test_dataset.py  test_dataset_config.py  test_evaluation_config.py  test_evaluation_factory.py  test_evaluation_metrics.py  test_evaluation_pipeline.py  test_events.py  test_experiment_config.py  test_experiment_pipeline.py  test_experiment_thread.py  test_factories.py  test_filter_age.py  test_filter_count.py  test_filter_countAttrib.py  (+9 more)
(+931 files in other folders)
