[metadata]
name = fair_rec_kit_lib
version = 0.0.1
author = RecCoons
description = Library for FairRecKit application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheMinefreak23/fair-rec-kit-lib
project_urls =
    Bug Tracker = https://github.com/TheMinefreak23/fair-rec-kit-lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = fair_rec_kit_lib
packages = find:
python_requires = >=3.6

[options.packages.find]
where = fair_rec_kit_lib
