[metadata]
name = fairreckitlib
version = 0.1.6
author = RecCoons
description = Library for FairRecKit application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheMinefreak23/fairreckitlib
project_urls =
    Bug Tracker = https://github.com/TheMinefreak23/fairreckitlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    lenskit
    implicit
    Cython
    scikit-surprise
    pandas
    elliot @ git+https://git@github.com/sisinflab/elliot@v0.3.1#egg=elliot
[options.packages.find]
where = src
